force-app/main/default/objects/Integration_Mappings__mdt/Integration_Mappings__mdt.object-meta.xml
<CustomObject>
    <label>Integration Mappings</label>
    <pluralLabel>Integration Mappings</pluralLabel>
</CustomObject>