force-app/main/default/objects/Integration_Mappings__mdt/fields/Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Format__c</fullName>
    <label>Date Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>