force-app/main/default/objects/Integration_Mappings__mdt/fields/Date_Separator__c.field-meta.xml
<CustomField>
    <fullName>Date_Separator__c</fullName>
    <label>Date Separator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>