force-app/main/default/objects/Integration_Mappings__mdt/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External ID</label>
    <type>Checkbox</type>
</CustomField>