force-app/main/default/objects/Integration_Mappings__mdt/fields/Field_Length__c.field-meta.xml
<CustomField>
    <fullName>Field_Length__c</fullName>
    <label>Field Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>