force-app/main/default/objects/Integration_Mappings__mdt/fields/Lookup_SObject__c.field-meta.xml
<CustomField>
    <fullName>Lookup_SObject__c</fullName>
    <label>Lookup SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>