force-app/main/default/objects/Integration_Mappings__mdt/fields/Lookup_SObject_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Lookup_SObject_External_ID__c</fullName>
    <label>Lookup SObject External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>