force-app/main/default/objects/Integration_Mappings__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>Integration_Object__mdt</referenceTo>
    <relationshipLabel>Integration Mappings</relationshipLabel>
    <relationshipName>Integration_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>