force-app/main/default/objects/Integration_Mappings__mdt/listViews/Todos_Inbound.listView-meta.xml
<ListView>
    <fullName>Todos_Inbound</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field_Type__c</columns>
    <columns>Object__c</columns>
    <columns>Salesforce_Field__c</columns>
    <columns>Salesforce_Field_Type__c</columns>
    <columns>External_ID__c</columns>
    <columns>Inbound__c</columns>
    <columns>Outbound__c</columns>
    <columns>Lookup_SObject__c</columns>
    <columns>Lookup_SObject_External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inbound__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Todos Inbound</label>
</ListView>